# shipany-bot-core

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .test.env  CHANGELOG.rst  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  devenv.nix  pyproject.toml  requirements.txt  requirements[cli].txt
.github/workflows/: check-python-package.yml  wheels.yml
changelog.d/: 20240519_111840_Sergey.Parfenyuk.rst  20240528_220311_Sergey.Parfenyuk_secrets.rst  20240529_082751_Sergey.Parfenyuk_more_than_1_reply.rst  20240612_072341_Sergey.Parfenyuk_web.rst  20240618_184944_Sergey.Parfenyuk_ctx.rst
examples/: echo-bot.json
src/shipany/bot/: __init__.py  bindings.py  config.py
src/shipany/bot/actions/broken_action/: v1.py  v3.py  v4.py
src/shipany/bot/actions/http_request/: v1.py
src/shipany/bot/actions/json_path_action/: v1.py
src/shipany/bot/actions/message_action/: v1.py
src/shipany/bot/actions/state_action/: v1.py
src/shipany/bot/actions/transition_action/: v1.py
src/shipany/bot/cli/: main.py
src/shipany/bot/contrib/aiogram/: action_dispatcher.py  backend.py  bindings.py  context.py  router.py
src/shipany/bot/contrib/aiogram/actions/: function.py  message.py  state.py  transition.py
src/shipany/bot/contrib/aiogram/events/: __init__.py  handler.py
src/shipany/bot/contrib/aiogram/factories/: send_message.py  telegram_objects.py
src/shipany/bot/contrib/aiogram/persistency/: bindings.py  handles.py
src/shipany/bot/contrib/aiogram/process/: bindings.py
src/shipany/bot/contrib/aiogram/process/http_request/: bindings.py  namespaces.py  v1.py
src/shipany/bot/contrib/aiogram/process/json_path_action/: v1.py
src/shipany/bot/contrib/aiogram/process/message_action/: v1.py
src/shipany/bot/contrib/aiogram/process/state_action/: v1.py
src/shipany/bot/contrib/aiogram/process/transition_action/: v1.py
src/shipany/bot/contrib/aiogram/renders/: __init__.py  attributes_mapping.py  bindings.py  context_proxy.py  jinja_env.py  namespaces.py
src/shipany/bot/contrib/aiogram/webhook/: events.py
src/shipany/bot/contrib/semver/: model.py
src/shipany/bot/conversation/: context.py  errors.py  loader.py
src/shipany/bot/conversation/handlers/: actions.py  activations.py  events.py
src/shipany/bot/conversation/models/: __init__.py  action.py  conversation.py  flow.py
src/shipany/bot/conversation/models/activations/: __init__.py  base.py  event.py  webhook.py
src/shipany/bot/conversation/models/v1/: flow.py  steps.py  validators.py  webhook.py
src/shipany/bot/conversation/models/v1/activations/: __init__.py  command.py
src/shipany/bot/conversation/renders/: attributes_mapping.py  context_proxy.py  jinja_env.py
src/shipany/bot/conversation/v1/: errors.py  loader.py  validators.py
src/shipany/bot/conversation/v1/handlers/: __init__.py  events.py
src/shipany/bot/conversation/v1/models/: __init__.py  conversation.py  flow.py  steps.py
src/shipany/bot/conversation/v1/models/actions/: __init__.py  base.py  function.py  message.py  state.py  transition.py
src/shipany/bot/conversation/v1/models/activations/: base.py  command.py  event.py
src/shipany/bot/errors/: __init__.py
src/shipany/bot/jsonlogic/: __init__.py  apply.py  model.py
src/shipany/bot/persistency/: handles.py  scopes.py
src/shipany/bot/providers/: bindings.py  captures.py  secrets.py
src/shipany/bot/runtime/: bindings.py  captures.py  context.py  secrets.py
src/shipany/bot/web/: events.py  server.py
tests/: conftest.py
tests/fixtures/: test.env
tests/fixtures/payloads/schema/v1/: invalid_flow_with_missed_commands.json  invalid_flow_with_missed_start_state.json  valid_flow_with_simple_user_input.json  valid_flow_with_simple_user_input_and_conditional_response.json  valid_flow_with_string_substitution.json
tests/schema_v1/: conftest.py  test_basic_flows.py
tests/shipany/bot/: conftest.py
tests/shipany/bot/actions/: test_state_action_v1.py
tests/shipany/bot/contrib/aiogram/: conftest.py  test_action_dispatcher.py  test_context.py  test_flows.py  test_router.py
tests/shipany/bot/contrib/aiogram/actions/: test_http_request.py  test_json_path_processing.py  test_state_processing.py  test_transition_processing.py
tests/shipany/bot/contrib/aiogram/events/: test_event_handler.py
tests/shipany/bot/contrib/aiogram/factories/: test_send_message.py
tests/shipany/bot/contrib/aiogram/persistency/: test_handle_generator.py
tests/shipany/bot/contrib/aiogram/process/http_requests/: test_http_request.py  test_namespaces.py
tests/shipany/bot/contrib/aiogram/renders/: test_attributes_mapping.py  test_renders_namespaces.py
tests/shipany/bot/conversation/: conftest.py  test_loader.py
tests/shipany/bot/conversation/handlers/: test_actions.py  test_activation_handler.py
tests/shipany/bot/conversation/models/activations/: test_command_activation.py  test_event_activation.py
tests/shipany/bot/conversation/v1/models/: test_models.py
tests/shipany/bot/conversation/v1/models/actions/: test_message.py  test_state.py  test_transition.py
tests/shipany/bot/jsonlogic/: test_jsonlogic.py
tests/shipany/bot/web/: conftest.py  test_server.py
